# yachiyo

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  check.sh  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  test_response.sh  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tests.json  tsconfig.web.tsbuildinfo  yachiyo-acp-dual-path-spec.md  yachiyo-acp-implementation-brief.md
.alma/: handoff-mmq7th3vyqhjicupdc.md  handoff-mmuaitwbmhdo6f5z57b-time.md
.changeset/: README.md  afraid-apes-scream.md  brown-tigers-scream.md  chubby-roses-repair.md  cold-moons-press.md  cold-nails-heal.md  config.json  cute-animals-return.md  dirty-dodos-attend.md  eager-pants-cry.md  eight-spoons-leave.md  eleven-comics-pump.md  empty-falcons-wink.md  fast-sheep-pay.md  forty-lamps-battle.md  funny-poems-cheer.md  funny-rockets-return.md  good-regions-relate.md  hungry-toys-deny.md  little-chefs-jog.md  little-frogs-try.md  loose-kings-lick.md  lucky-hotels-tan.md  metal-cycles-accept.md  mighty-turkeys-jump.md  moody-facts-send.md  new-bees-pay.md  nice-tigers-invent.md  pink-dryers-pump.md  ready-masks-juggle.md  silver-cycles-bow.md  slimy-geese-hear.md  slimy-monkeys-melt.md  soft-teams-help.md  sour-points-tickle.md  swift-years-dance.md  tall-pianos-itch.md  tame-flowers-nail.md  tame-socks-play.md  tasty-bananas-deny.md  (+8 more)
.husky/: pre-commit
native/sync-core/: Cargo.toml
native/sync-core/src/: lib.rs  main.rs
(+1428 files in other folders)
